--- a/src/app/admin/components/admin-home/admin-home.component.html
+++ b/src/app/admin/components/admin-home/admin-home.component.html
@@ -7,23 +7,42 @@
             class="no-underline cursor-pointer valign-center p-r-20 col-accent">HardwareDash Admin</a>
         </div>
       </mat-toolbar>
-      <mat-nav-list class="dashboard">
-        <a mat-list-item [routerLink]="'/admin/dashboard'" [ngClass]="{'bg-amber-gradient': routeIsActive('dashboard')}">
-          <mat-icon mat-list-icon>dashboard</mat-icon>
-          <p matLine>Dashboard</p>
-        </a>
-        <a mat-list-item [routerLink]="'/admin/config'" [ngClass]="{'bg-amber-gradient': routeIsActive('config')}">
-          <mat-icon mat-list-icon>tune</mat-icon>
-          <p matLine>Config</p>
-        </a>
-        <a mat-list-item [routerLink]="'/admin/users'" [ngClass]="{'bg-amber-gradient': routeIsActive('users')}">
-          <mat-icon mat-list-icon>supervisor_account</mat-icon>
-          <p matLine>Users</p>
-        </a>
-        <a mat-list-item [routerLink]="'/admin/price-list'" [ngClass]="{'bg-amber-gradient': routeIsActive('price-list')}">
-          <mat-icon mat-list-icon>payments</mat-icon>
-          <p matLine>Price List</p>
-        </a>
+      <mat-nav-list style="overflow-y: auto; height: 70.5vh;">
+        <div *ngFor="let link of dataHandler.sidenavMenu" [@slideInOut]="link.show ? 'out' : 'in'">
+          <span *ngIf="checkUrlAccessibleOrNot(link?.userRole, link?.loginType)">
+            <ng-container *ngIf="link.isChildAvailable; else elseTemplate">
+              <mat-list-item role="link" #links [ngClass]="{'bg-amber-gradient': routeIsActive(link?.href)}"
+                (click)="showHideNavMenu(link)">
+                <mat-icon class="component-viewer-nav" matListIcon svgIcon="{{link.icon}}"></mat-icon>
+                <a matLine [matTooltip]="link.name | translate:locale.language" matTooltipPosition="after">
+                  {{ link.name | translate:locale.language}}</a>
+                <mat-icon *ngIf="!link.isShow">add</mat-icon>
+                <mat-icon *ngIf="link.isShow">remove</mat-icon>
+              </mat-list-item>
+              <mat-divider></mat-divider>
+              <span *ngIf="link.isShow">
+                <div *ngFor="let clink of link.child; let last = last;">
+                  <mat-list-item *ngIf="checkUrlAccessibleOrNot(clink?.userRole, link?.loginType)" role="link" #links
+                    routerLinkActive="active-link" routerLink="{{clink.href}}" (click)="onLinkClick()" class="p-l-10">
+                    <mat-icon class="component-viewer-nav" matListIcon svgIcon="{{clink.icon}}"></mat-icon>
+                    <a matLine [matTooltip]="clink.name | translate:locale.language" matTooltipPosition="after">
+                      {{ clink.name | translate:locale.language}}</a>
+                  </mat-list-item>
+                  <mat-divider></mat-divider>
+                </div>
+              </span>
+            </ng-container>
+            <ng-template #elseTemplate>
+              <mat-list-item role="link" #links routerLinkActive="active-link" routerLink="{{link.href}}"
+                (click)="onLinkClick()">
+                <mat-icon class="component-viewer-nav" matListIcon svgIcon="{{link.icon}}"></mat-icon>
+                <a matLine [matTooltip]="link.name | translate:locale.language" matTooltipPosition="after">
+                  {{ link.name  | translate:locale.language}}</a>
+              </mat-list-item>
+              <mat-divider></mat-divider>
+            </ng-template>
+          </span>
+        </div>
       </mat-nav-list>
     </mat-sidenav>
 
@@ -42,8 +61,17 @@
           <div class="app-logo">
           </div>
           <span class="spacer"></span>
+          <button mat-icon-button matTooltip="{{'APP.CHANGE_LANGUAGE' | translate:locale.language}}" matTooltipPosition="before" [matMenuTriggerFor]="menu" aria-label="Example icon-button with a menu">
+            <mat-icon [svgIcon]="'translate'"></mat-icon>
+          </button>
+          <mat-menu #menu="matMenu">
+            <button mat-menu-item *ngFor="let trans of schema" (click)="switchLanguage(trans.locale)">
+              <mat-icon>{{ trans.locale.language ==locale.language ? 'check' : ''}}</mat-icon>
+              <span>{{ trans.text | translate:locale.language }}</span>
+            </button>
+          </mat-menu>
           <button mat-icon-button matTooltip="{{'APP.SETTINGS.THEME.BUTTON.TEXT' | translate:locale.language}}" matTooltipPosition="before" (click)="dataHandler.isDarkMode = !dataHandler.isDarkMode">
-            <mat-icon svgIcon="theme-light-dark"></mat-icon>
+            <mat-icon [svgIcon]="dataHandler.isDarkMode ? 'weather-night' : 'weather-sunny'"></mat-icon>
           </button>
           <button matTooltip="{{'APP.GOTO_DASHBOARD' | translate:locale.language}}" matTooltipPosition="before"
             routerLink="/admin/dashboard" mat-icon-button>
