--- a/src/app/auth/components/login/login.component.html
+++ b/src/app/auth/components/login/login.component.html
@@ -1,56 +1,70 @@
 <div class="inner-login-sidenav-content">
-    <div class="p-b-0">
-        <div fxLayout="row" fxLayoutAlign="start center">
-            <div [ngClass]="{'generic-div-login': true}" [ngClass.sm]="{'generic-div-login-sm': true, 'm-l-75':true}" [ngClass.gt-sm]="{'generic-div-login-md': true, 'm-l-75':true}" fxLayout="column" fxLayoutAlign="center start" fxShow="true" fxHide.xs>
-                <mat-icon class="logo-font m-l-40">construction</mat-icon>
-                <span class="school-font weight-500 size-30 style-italic color-white m-t-40">{{'LOGIN.WELCOME_TO' | translate:locale.language:{projectName: dataHandler.projectName} }}</span>
-                <span class="school-font weight-300 size-14 style-italic col-grey generic-div-login-text m-t-15">
-                   &copy;{{dataHandler.projectName}} 2020
-                </span>
+  <div class="p-b-0">
+    <div fxLayout="row" fxLayoutAlign="start center">
+      <div [ngClass]="{'generic-div-login': true}" [ngClass.sm]="{'generic-div-login-sm': true, 'm-l-75':true}"
+        [ngClass.gt-sm]="{'generic-div-login-md': true, 'm-l-75':true}" fxLayout="column" fxLayoutAlign="center start"
+        fxShow="true" fxHide.xs>
+        <mat-icon class="logo-font m-l-40">construction</mat-icon>
+        <span class="school-font weight-500 size-30 style-italic color-white m-t-40">{{'LOGIN.WELCOME_TO' |
+          translate:locale.language:{projectName: dataHandler.projectName} }}</span>
+        <span class="school-font weight-300 size-14 style-italic col-grey generic-div-login-text m-t-15">
+          &copy;{{dataHandler.projectName}} 2020
+        </span>
+      </div>
+      <div [ngClass]="{'login-div': true}" [ngClass.sm]="{'login-div-sm': true}"
+        [ngClass.gt-sm]="{'login-div-md': true}" fxLayout="column" fxLayoutAlign="center end">
+        <mat-card class="login-card">
+          <mat-card-content>
+            <div fxLayout="row" fxLayoutAlign="center center">
+              <mat-icon fxShow="true" fxHide.gt-xs class="logo-font text-center m-t-40 m-b-10">construction</mat-icon>
             </div>
-            <div [ngClass]="{'login-div': true}" [ngClass.sm]="{'login-div-sm': true}" [ngClass.gt-sm]="{'login-div-md': true}" fxLayout="column" fxLayoutAlign="center end">
-                <mat-card class="login-card">
-                    <mat-card-content>
-                        <div fxLayout="row" fxLayoutAlign="center center">
-                            <mat-icon fxShow="true" fxHide.gt-xs class="logo-font text-center m-t-40 m-b-10">construction</mat-icon>
-                        </div>
-                        <div class="m-t-40 m-b-25 m-r-30 m-l-30" fxLayout="column" fxLayoutAlign="center start" fxLayoutGap="10px h-100">
-                            <span class="school-font weight-400 size-20">{{'LOGIN.LOGIN_TO_YOUR_ACCOUNT' | translate:locale.language}}</span>
-                            <form id="loginForm" [formGroup]="loginForm" (ngSubmit)="onLoginSubmit()" #form="ngForm" novalidate class="flex-full m-t-30">
-                                <div fxLayout="row" fxLayoutAlign="space-around center">
-                                    <div fxFlex="100">
-                                        <mat-form-field class="flex-full" appearance="outline" [hideRequiredMarker]="dataHandler.showRequiredMarker">
-                                            <mat-label>{{'LOGIN.EMAIL' | translate:locale.language}}</mat-label>
-                                            <input matInput placeholder="{{'LOGIN.EMAIL' | translate:locale.language}}" [formControl]="loginForm.controls['emailField']" maxlength="100" required>
-                                            <mat-error *ngIf="loginForm.controls['emailField'].hasError('email') && !loginForm.controls['emailField'].hasError('required')">
-                                                {{ 'LOGIN.ENTER_VALID_MAIL' | translate:locale.language }}
-                                            </mat-error>
-                                            <mat-error *ngIf="loginForm.controls['emailField'].hasError('required')">
-                                                {{ 'LOGIN.EMAIL_IS' | translate:locale.language }}
-                                                <strong> {{ 'COMMON.REQUIRED' | translate:locale.language }}</strong>
-                                            </mat-error>
-                                        </mat-form-field>
-                                    </div>
-                                </div>
-                                <div fxLayout="row" fxLayoutAlign="space-around center" class="m-t-10">
-                                    <div fxFlex="100">
-                                        <mat-form-field class="flex-full" appearance="outline" [hideRequiredMarker]="dataHandler.showRequiredMarker">
-                                            <mat-label>{{'LOGIN.PASSWORD' | translate:locale.language}}</mat-label>
-                                            <input [type]="hide ? 'password' : 'text'" matInput placeholder="{{'LOGIN.PASSWORD' | translate:locale.language}}" [formControl]="loginForm.controls['password']" maxlength="50" required>
-                                            <mat-icon matSuffix (click)="hide = !hide" class="cur-pointer">
-                                                {{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
-                                            <mat-error *ngIf="loginForm.controls['password'].hasError('required')">
-                                                {{ 'LOGIN.PASSWORD_IS' | translate:locale.language }}
-                                                <strong> {{ 'COMMON.REQUIRED' | translate:locale.language }}</strong>
-                                            </mat-error>
-                                        </mat-form-field>
-                                    </div>
-                                </div>
-                                <div fxLayout="row" fxLayoutAlign="end center" class="m-t-10">
-                                    <a class="school-font weight-500 size-14 col-blue no-underline" [routerLink]="'/auth/forgotpassword'">{{'LOGIN.FORGOT_PASS'
-                      |                      translate:locale.language}}</a>
-                                </div>
-                                <!-- <div fxLayout="column" fxLayoutAlign="center start" fxLayoutGap="10px" *ngIf="loginForm.controls['emailField'].value">
+            <div class="m-t-40 m-b-25 m-r-30 m-l-30" fxLayout="column" fxLayoutAlign="center start"
+              fxLayoutGap="10px h-100">
+              <span class="school-font weight-400 size-20">{{'LOGIN.LOGIN_TO_YOUR_ACCOUNT' |
+                translate:locale.language}}</span>
+              <form id="loginForm" [formGroup]="loginForm" (ngSubmit)="onLoginSubmit()" #form="ngForm" novalidate
+                class="flex-full m-t-30">
+                <div fxLayout="row" fxLayoutAlign="space-around center">
+                  <div fxFlex="100">
+                    <mat-form-field class="flex-full" appearance="outline"
+                      [hideRequiredMarker]="dataHandler.showRequiredMarker">
+                      <mat-label>{{'LOGIN.EMAIL' | translate:locale.language}}</mat-label>
+                      <input matInput placeholder="{{'LOGIN.EMAIL' | translate:locale.language}}"
+                        formControlName="emailField" maxlength="100" required>
+                      <mat-error
+                        *ngIf="loginForm.controls['emailField'].hasError('email') && !loginForm.controls['emailField'].hasError('required')">
+                        {{ 'LOGIN.ENTER_VALID_MAIL' | translate:locale.language }}
+                      </mat-error>
+                      <mat-error *ngIf="loginForm.controls['emailField'].hasError('required')">
+                        {{ 'LOGIN.EMAIL_IS' | translate:locale.language }}
+                        <strong> {{ 'COMMON.REQUIRED' | translate:locale.language }}</strong>
+                      </mat-error>
+                    </mat-form-field>
+                  </div>
+                </div>
+                <div fxLayout="row" fxLayoutAlign="space-around center" class="m-t-10">
+                  <div fxFlex="100">
+                    <mat-form-field class="flex-full" appearance="outline"
+                      [hideRequiredMarker]="dataHandler.showRequiredMarker">
+                      <mat-label>{{'LOGIN.PASSWORD' | translate:locale.language}}</mat-label>
+                      <input [type]="hide ? 'password' : 'text'" matInput
+                        placeholder="{{'LOGIN.PASSWORD' | translate:locale.language}}" formControlName="password"
+                        maxlength="50" required>
+                      <mat-icon matSuffix (click)="hide = !hide" class="cur-pointer">
+                        {{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
+                      <mat-error *ngIf="loginForm.controls['password'].hasError('required')">
+                        {{ 'LOGIN.PASSWORD_IS' | translate:locale.language }}
+                        <strong> {{ 'COMMON.REQUIRED' | translate:locale.language }}</strong>
+                      </mat-error>
+                    </mat-form-field>
+                  </div>
+                </div>
+                <div fxLayout="row" fxLayoutAlign="end center" class="m-t-10">
+                  <a class="school-font weight-500 size-14 col-blue no-underline"
+                    [routerLink]="'/auth/forgotpassword'">{{'LOGIN.FORGOT_PASS'
+                    | translate:locale.language}}</a>
+                </div>
+                <!-- <div fxLayout="column" fxLayoutAlign="center start" fxLayoutGap="10px" *ngIf="loginForm.controls['emailField'].value">
                                     <label id="radio-group-label">Login as</label>
                                     <mat-radio-group aria-labelledby="radio-group-label" fxLayout="column" fxLayoutAlign="center start" fxLayoutGap="10px" [formControl]="loginForm.controls['loginAs']">
                                         <mat-radio-button class="login-as-radio-button" *ngFor="let type of loginTypes" [value]="type.value" [disabled]="type.isDisabled">
@@ -58,33 +72,37 @@
                                         </mat-radio-button>
                                     </mat-radio-group>
                                 </div> -->
-                                <div fxLayout="row" fxLayoutAlign="center" class="m-t-20 flex-full">
-                                    <ng-container *ngIf="!isLoginInitiated; else elseTemplate">
-                                        <button class="flex-full" type="submit" [disabled]="loginForm.invalid" mat-raised-button color="primary">{{'LOGIN.LOGIN_BUTTON'
-                        | translate:locale.language}}</button>
-                                    </ng-container>
-                                    <ng-template #elseTemplate>
-                                        <app-component-loading [type]="'circle'"></app-component-loading>
-                                    </ng-template>
-                                </div>
-                                <div fxLayout="row" fxLayoutAlign="center" class="m-t-20">
-                                </div>
-                                <span class="spacer"></span>
-                                <div fxLayout="column" fxLayoutAlign="end center" ngClass="flex-full" [ngClass.gt-xs]="{'m-t-33-p': true}">
-                                    <mat-form-field class="flex-full" appearance="outline">
-                                        <mat-label>{{'APP.CHANGE_LANGUAGE' | translate:locale.language}}</mat-label>
-                                        <mat-select placeholder="{{'APP.CHANGE_LANGUAGE' | translate:locale.language}}" [(value)]="defaultLang" class="flex-full">
-                                            <mat-option *ngFor="let trans of schema" (click)="switchLanguage(trans.locale)" [value]="trans.text">
-                                                {{ trans.text | translate:locale.language }}
-                                            </mat-option>
-                                        </mat-select>
-                                    </mat-form-field>
-                                </div>
-                            </form>
-                        </div>
-                    </mat-card-content>
-                </mat-card>
+                <div fxLayout="row" fxLayoutAlign="center" class="m-t-20 flex-full">
+                  <ng-container *ngIf="!isLoginInitiated; else elseTemplate">
+                    <button class="flex-full" type="submit" [disabled]="loginForm.invalid" mat-raised-button
+                      color="primary">{{'LOGIN.LOGIN_BUTTON'
+                      | translate:locale.language}}</button>
+                  </ng-container>
+                  <ng-template #elseTemplate>
+                    <app-component-loading [type]="'circular'"></app-component-loading>
+                  </ng-template>
+                </div>
+                <div fxLayout="row" fxLayoutAlign="center" class="m-t-20">
+                </div>
+                <span class="spacer"></span>
+                <div fxLayout="column" fxLayoutAlign="end center" ngClass="flex-full"
+                  [ngClass.gt-xs]="{'m-t-33-p': true}">
+                  <mat-form-field class="flex-full" appearance="outline">
+                    <mat-label>{{'APP.CHANGE_LANGUAGE' | translate:locale.language}}</mat-label>
+                    <mat-select placeholder="{{'APP.CHANGE_LANGUAGE' | translate:locale.language}}"
+                      [(value)]="defaultLang" class="flex-full">
+                      <mat-option *ngFor="let trans of schema" (click)="switchLanguage(trans.locale)"
+                        [value]="trans.text">
+                        {{ trans.text | translate:locale.language }}
+                      </mat-option>
+                    </mat-select>
+                  </mat-form-field>
+                </div>
+              </form>
             </div>
-        </div>
+          </mat-card-content>
+        </mat-card>
+      </div>
     </div>
+  </div>
 </div>
