--- a/src/app/admin/components/admin-user-list/admin-user-list.component.scss
+++ b/src/app/admin/components/admin-user-list/admin-user-list.component.scss
@@ -17,3 +17,13 @@
     }
   }
 }
+
+.example-viewport {
+  height: 200px;
+  width: 200px;
+  border: 1px solid black;
+}
+
+.example-item {
+  height: 50px;
+}
