--- a/src/app/admin/components/admin-price-list/admin-price-list.component.scss
+++ b/src/app/admin/components/admin-price-list/admin-price-list.component.scss
@@ -329,3 +329,16 @@ tr.element-row:not(.expanded-row):active {
 .table-container {
   overflow-x: scroll;
 }
+
+.example-loading-shade {
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 56px;
+  right: 0;
+  background: rgba(0, 0, 0, 0.15);
+  z-index: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
